<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="290dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ten" />

            <EditText
                android:id="@+id/editT_ten"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editT_ten"
                android:inputType="textPersonName"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sdt" />

            <EditText
                android:id="@+id/editT_sdt"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editT_sdt"
                android:inputType="textPersonName"
                tools:targetApi="o" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221">

        <TextView
            android:id="@+id/tv_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_member" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioB_vip"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioB_vip" />

            <RadioButton
                android:id="@+id/radioB_normal"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioB_normal" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321">

        <TextView
            android:id="@+id/tv_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_lv" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioB_nam"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioB_nam" />

            <RadioButton
                android:id="@+id/radioB_ngoi"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioB_ngoi" />
        </RadioGroup>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/cb_dv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_dv" />

            <TextView
                android:id="@+id/tv_dv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dv" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_tt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tt" />

            <Spinner
                android:id="@+id/spinner_tien"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_tien" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/bt_huy"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/bt_huy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/bt_thanhtoan"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/bt_thanhtoan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />


</android.support.constraint.ConstraintLayout>